botão de whatsapp adicionado

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -299,6 +299,33 @@ nav ul li a:hover {
   background: var(--secondary-color);
 }
 
+
+/* ======= BOTÃO WHATSAPP ======= */
+.btn-whatsapp {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background: #25d366;
+  color: #fff;
+  font-size: 1.8rem;
+  text-align: center;
+  line-height: 1;
+  padding: 15px 18px;
+  border-radius: 50%;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25);
+  transition: transform 0.2s ease-in-out, box-shadow 0.2s;
+  z-index: 999;
+}
+
+.btn-whatsapp img {
+  width: 35px;
+}
+
+.btn-whatsapp:hover {
+  transform: scale(1.1);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.35);
+}
+
 /* ===========================
    Footer
 =========================== */
@@ -397,12 +424,14 @@ footer iframe {
   }
 }
 
+
 @media (max-width: 480px) {
   header h1 {
     font-size: 1.8rem;
   }
 
   nav ul li {
+    display: none;
     margin: 0 10px;
     font-size: 1rem;
   }
@@ -429,4 +458,9 @@ footer iframe {
     font-size: 0.9rem;
     padding: 8px 12px;
   }
+
+  .btn-whatsapp {
+    display: none;
+  }
+
 }
